# ACP-Practise

./: .env  demo_client.py  policy_agent.py  pyproject.toml
acp-agent/: pyvenv.cfg
acp-agent/Scripts/: activate  activate.bat
db/0e46543a-9879-426a-b723-56d826bb427b/: index_metadata.pickle
