[project]
name = "acp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "acp-sdk>=0.8.4",
    "crewai>=0.118.0",
    "crewai-tools>=0.43.0",
    "google-generativeai>=0.8.5",
    "langchain-ollama>=0.3.2",
    "ollama>=0.4.8",
]
